compiler/tests/pass/defer_test/main.afns
package test;

extern "C" fn puts(s: cstr) -> i32;

fn greet() -> i32 {
    defer puts("goodbye");
    puts("hello");
    return 0;
}

fn main() -> i32 {
    return greet();
}
